# computational_complexity_graph3coloring

./: CMakeLists.txt  README.md  benchmark.json
benchmarks/: CMakeLists.txt  anticlique_number_distribution.cpp  benchmark.cpp
src/: CMakeLists.txt  graph.cpp  graph.h
statistics/: benchmark.json  graph30.txt  graph40.txt  graph50.txt
tests/: CMakeLists.txt  test.cpp
tex/: article.tex  bib.tex
